--- a/public/modules/core/views/modal.client.view.html
+++ b/public/modules/core/views/modal.client.view.html
@@ -56,4 +56,5 @@
 <div class="modal-footer">
     <button class="btn btn-primary" ng-click="ok()">OK</button>
     <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
+    <button class="btn btn-danger" ng-click="delete()">Delete</button>
 </div>
