--- a/public/modules/eventsdata/views/create-eventsdatum.client.view.html
+++ b/public/modules/eventsdata/views/create-eventsdatum.client.view.html
@@ -3,7 +3,7 @@
 </div>
 <div class="modal-body">
     <!--<div class="col-md-12">-->
-        <form class="form-horizontal">
+        <form class="form-horizontal" novalidate>
             <fieldset>
                 <div class="form-group">
                     <div class="input-group">
