--- a/public/modules/users/views/authentication/signin.client.view.html
+++ b/public/modules/users/views/authentication/signin.client.view.html
@@ -18,7 +18,7 @@
 		<!--</a>-->
 	<!--</div>-->
 	<!--<h3 class="col-md-12 text-center">Or with your account</h3>-->
-	<div class="col-xs-offset-2 col-xs-8 col-md-offset-5 col-md-2">
+	<div class="col-xs-offset-2 col-xs-8 col-md-offset-5 col-md-2" style="margin-top: 200px">
 		<form data-ng-submit="signin()" class="signin form-horizontal" autocomplete="off">
 			<fieldset>
 				<div class="form-group">
@@ -30,8 +30,8 @@
 					<input type="password" id="password" name="password" class="form-control" data-ng-model="credentials.password" placeholder="Password">
 				</div>
 				<div class="text-center form-group">
-					<button type="submit" class="btn btn-primary">Sign in</button>&nbsp; or&nbsp;
-					<a href="/#!/signup">Sign up</a>
+					<button type="submit" class="btn btn-primary">Sign in</button>
+					<!--&lt;!&ndash;<a href="/#!/signup">Sign up</a>&ndash;&gt;&nbsp; or&nbsp;-->
 				</div>
 				<div class="forgot-password">
 					<a href="/#!/password/forgot">Forgot your password?</a>
