--- a/public/modules/core/views/modal.client.view.html
+++ b/public/modules/core/views/modal.client.view.html
@@ -19,6 +19,11 @@
                     <input ng-model="event.endDate" type="datetime">
                 </md-input-container>
             </div>
+            <div layout layout-sm="column">
+                <md-checkbox ng-model="event.deployment" aria-label="Deployment Completed">
+                    Deployment Completed
+                </md-checkbox>
+            </div>
         </form>
 
     </md-content>
